Fix: Scrollbar Fix, Responsive Design bis ungefähr 300px Breite

--- a/main.css
+++ b/main.css
@@ -382,8 +382,8 @@ p {
 	}
 
 	#wrapper {
-		width: 95vw;
-		margin-left: 2.5vw;
+		width: 92vw;
+		margin-left: 4vw;
 	}
 
 	.column {
